Fixed Kafka configuration. Added DTO for data exchange with Kafka. Added a new repository for working with Kafka data.

--- a/CatalogService/pom.xml
+++ b/CatalogService/pom.xml
@@ -73,6 +73,11 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.20.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>annotationProcessor</scope>
+		</dependency>
 
 	</dependencies>
 
