--- a/ExpectedBooksService/pom.xml
+++ b/ExpectedBooksService/pom.xml
@@ -78,6 +78,10 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.20.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
